data/all_generated_tests/raw_wast_tests/block_StackCorruption_1874.wast
;; 5. **Test Description**: Use a block that immediately branches out to the end, skipping the rest of its instructions, and verify if the stack state remains consistent with expectations.    - **Constraint**: Tests whether forward branches are correctly managing the stack.    - **Relation to Stack Corruption**: Failure in handling forward branches as expected might leave the stack in an incorrect or corrupted state.

(assert_invalid
  (module (func $forward-branch-stack-consistency (result i32)
    (block (result i32)
      (br 0) 
      (i32.const 42)
    )
  ))
  "type mismatch"
)